# RMatlab

./: .Rbuildignore  Bugs.html  Changes.html  DESCRIPTION  FAQ.html  GNUmakefile  NAMESPACE  README  Todo.html  configure  configure.in
R/: matlab.R
Web/: GNUmakefile  configure  configure.in  index.html  index.html.in
inst/docs/: Makefile  macros.tex  outline.tex  rmatlab.bib
inst/mex/: README
inst/scripts/: RMatlab.csh  RMatlab.csh.in  RMatlab.sh  RMatlab.sh.in
man/: Matlab.Rd  MatlabEval.Rd  MatlabInit.Rd  MatlabPut.Rd  getMatlabInterface.Rd  getMatlabProperty.Rd
src/: Makefile  Makefile.in  Makevars  README  RMatlab.c  RMatlabConvert.h  callNamedR.c  callR.c  convert.c  initializeR.c  wrapper.c
tests/: basic.m  converterTests.R  error.R  fromR.R  lm.m
